--- a/joinUs.html
+++ b/joinUs.html
@@ -1,88 +1,107 @@
-  <!DOCTYPE html>
-  <html>
-  <head>
-    <style>
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        background-image: url("starsbackground.jpg");
-        font-family: Arial, sans-serif;
-      }
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-image: url("starsbackground.jpg");
+      font-family: Arial, sans-serif;
+    }
 
-      .form-container {
-        background-color: rgb(57, 57, 57);
-        background-image: url("emperor-palpatine-return-andor.jpg");
-        background-size: cover;
-        color: #ffffff; 
-        padding: 30px;  
-        border-radius: 8px;
-        box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
-        width: 100%;
-        max-width: 500px;
-      }
-      .input-container {
-        padding: 10px 0;
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 20px;
-      }
-      .input-field {
-        flex: 1;
-        margin-right: 30px;
-      }
-      .input-field:last-child {
-        margin-right: 0;
-      }
-      .button-container {
-        display: flex;
-        justify-content: center;
-      }
-      label {
-        display: block;
-        margin-bottom: 5px;
-      }
-      input, textarea {
-        background-color: #ffffffaf;
-        margin-left: -13px;
-        width: 100%;
-        padding: 10px;
-        border-radius: 4px;
-        border: 1px solid #ccc;
-      }
-      input[type="submit"] {
-        background-color: #007bff63;
-        color: white;
-        cursor: pointer;
-      }
-      input[type="submit"]:hover {
-        background-color: #0056b3;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="form-container">
-      <form action="your-email-script.php" method="post">
-        <div style="text-align: center">
-          <h1>Do it!</h1>
-        </div>  
-        <div class="input-container">
-          <div class="input-field">
-            <input type="text" id="username" name="username" required placeholder="Username">
-          </div>
-          <div class="input-field">
-            <input type="email" id="email" name="email" required placeholder="Email">
-          </div>
+    .form-container {
+      background-color: rgb(57, 57, 57);
+      background-image: url("emperor-palpatine-return-andor.jpg");
+      background-size: cover;
+      color: #ffffff; 
+      padding: 30px;  
+      border-radius: 8px;
+      box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
+      width: 100%;
+      max-width: 500px;
+    }
+    .input-container {
+      padding: 10px 0;
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 20px;
+    }
+    .input-field {
+      flex: 1;
+      margin-right: 30px;
+    }
+    .input-field:last-child {
+      margin-right: 0;
+    }
+    .button-container {
+      display: flex;
+      justify-content: center;
+    }
+    label {
+      display: block;
+      margin-bottom: 5px;
+    }
+    .radio-container {
+      display: flex;
+      align-items: center;
+    }
+    .radio-container label {
+      margin-right: 10px;
+    }
+    input, textarea {
+      background-color: #ffffffaf;
+      margin-left: -13px;
+      width: 100%;
+      padding: 10px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+    }
+    input[type="submit"] {
+      background-color: #007bff63;
+      color: white;
+      cursor: pointer;
+    }
+    input[type="submit"]:hover {
+      background-color: #0056b3;
+    }
+  </style>
+</head>
+<body>
+  <div class="form-container">
+    <form action="your-email-script.php" method="post">
+      <div style="text-align: center">
+        <h1>Do it!</h1>
+      </div>  
+      <div class="input-container">
+        <div class="input-field">
+          <input type="text" id="username" name="username" required placeholder="Username">
         </div>
-        <div>
-          <textarea id="message" name="message" rows="4" required placeholder="Message"></textarea>
+        <div class="input-field">
+          <input type="email" id="email" name="email" required placeholder="Email">
         </div>
-        <div class="button-container">
-          <input type="submit" value="Join The Dark Side">
+      </div>
+      <div>
+        <textarea id="message" name="message" rows="4" required placeholder="Message"></textarea>
+      </div>
+      <div class="input-container">
+        <label for="jediStatus">Are you a Jedi?</label>
+        <div class="radio-container">
+          <input type="radio" id="jediYes" name="jediStatus" value="Yes">
+          <label for="jediYes">Yes</label>
         </div>
-      </form>
-    </div>
-  </body>
-  </html>
+        <div class="radio-container">
+          <input type="radio" id="jediNo" name="jediStatus" value="No">
+          <label for="jediNo">No</label>
+        </div>
+      </div>
+      <div class="button-container">
+        <input type="submit">
+      </div>
+    </form>
+  </div>
+</body>
+</html>
+
